kustomize/overlays/staging-pdf/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shinsei-manager-frontend
spec:
  rules:
    - host: approvals-pdf-staging.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shinsei-manager-frontend
                port:
                  number: 80
