kustomize/overlays/staging-pdf/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shinsei-manager-front
spec:
  rules:
    - host: approvals-staging-pdf.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shinsei-manager-front
                port:
                  number: 80
